# shakesperean-pokemon

./: Cargo.toml  Dockerfile  README.md  swagger.yml
src/: error.rs  lib.rs  main.rs
src/services/: mod.rs  pokemon.rs  shakespeare.rs  shakesperean_pokemon.rs
