[package]
name = "shakesperean-pokemon"
version = "0.1.0"
authors = ["Marcelo Miranda <marcelo.caridade@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
reqwest = { version = "0.10.6", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
